# Discord-RPC-VST-3-Fl-Studio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.bat
Source/: DawUiStateDetector.cpp  DawUiStateDetector.h  DiscordIpcClient.cpp  DiscordIpcClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build-portable.ps1  build.ps1  install.ps1
